添加springboot程序jar包启动命令解析